# dodo-payments-invoice-service

./: .env.example  AI_USAGE.md  Cargo.toml  DESIGN.md  README.md  docker-compose.yml  openapi.yaml
invoice_service/: Cargo.toml  Dockerfile
invoice_service/src/: auth.rs  errors.rs  main.rs  models.rs  webhooks.rs
invoice_service/src/handlers/: customers.rs  invoices.rs  payments.rs
migrations/: 001_initial_schema.sql
mock_psp/: Cargo.toml  Dockerfile
mock_psp/src/: main.rs
