[package]
name = "invoice_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "invoice_service"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
axum       = { workspace = true }
sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sha2       = { workspace = true }
hmac       = { workspace = true }
hex        = { workspace = true }
rand       = { workspace = true }
reqwest    = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }
dotenvy    = { workspace = true }